# simple_bot

./: CMakeLists.txt  package.xml
config/: lidar_demo.yaml
docs/: adding_python.rst  minimalistic_package.rst
gazebo/worlds/: simple.sdf
launch/: pubsub_launch.py
scripts/: pypublisher.py
src/: cummulative_neuron.cpp  fake_lidar.cpp  parametrized_publisher.cpp  small_node_pub.cpp  small_node_sub.cpp  tiny_node.cpp
worlds/: 01_empty.sdf  01_simple.sdf
